# cookiecutter-pyqt

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  setup.cfg  {{cookiecutter.project_slug}}.spec
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/forms/: __init__.py  main_window.py  resources.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/palettes/: __init__.py  main_window.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/qt/: auto_generate_files.py  main_window.ui  resources.qrc
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/windows/: main_window.py
